--- a/26.md
+++ b/26.md
@@ -16,7 +16,7 @@
 
 ##### 描画した画像をレスポンスとして返す部分(進捗:50=>100%)
 
-レスポンスとして画像のダウンロードをさせるようにして作成しました
+レスポンスとして画像のダウンロードをさせるようにして作成しました。
 
 <!-- #### 画像切り出しAPIの作成(進捗:0=>100%)
 
