--- a/27.md
+++ b/27.md
@@ -37,10 +37,11 @@
 
 <!--
 (進捗:100%)
-GitlabのIssueのカンバン使おう
+GitlabのIssueのカンバン使おう.作業指示の確認するときにタイトルも決まる
 
 REST APIの設計を勉強するためGitHub上のREST APIを検索して例を見るなどするのも良い
 [Web API: The Good Partsを読んだまとめ](https://qiita.com/mitsuya/items/e33d5ac202b41447cfec)
 
 iPhoneの画像(4M程度)を100枚単位リクエスト
+
  -->
