--- a/28.md
+++ b/28.md
@@ -1,4 +1,4 @@
-# 2019-11-27 (水)
+# 2019-11-28 (木)
 
 ## 作業内容
 
@@ -19,7 +19,7 @@
 
 ##### 処理後の複数枚の画像ファイルを返す際にDjangoが対応している形式の調査
 
-DjangoによるHttpResponseはContent-type: multipartを扱えないらしい
+DjangoによるHttpResponseはContent-type: multipartを扱えないらしい=>複数ファイルのレスポンスはできないことがわかった
 ネット上の質問サイトでは複数ファイルをダウンロードさせる際はZIPファイルにまとめてから1ファイルとして返すことが勧められている
 調査内容を添えて処理後ファイルのレスポンス形式について仕様を固めたい
 
@@ -32,12 +32,6 @@ DjangoによるHttpResponseはContent-type: multipartを扱えないらしい
 タスク3における複数ファイルのレスポンス形式について明日相談したいと考えています。
 
 <!--
-(進捗:100%)
-GitlabのIssueのカンバン使おう.作業指示の確認するときにタイトルも決まる
-
-REST APIの設計を勉強するためGitHub上のREST APIを検索して例を見るなどするのも良い
-[Web API: The Good Partsを読んだまとめ](https://qiita.com/mitsuya/items/e33d5ac202b41447cfec)
-
-iPhoneの画像(4M程度)を100枚単位リクエスト
+レスポンスがZIPならリクエストもZIPで受け付けたほうが良い？
 
  -->
