--- a/29.md
+++ b/29.md
@@ -15,8 +15,8 @@
 
 - DB構造の決定
 - 現在3つのAPIに分けて作成中のクランプ動作検出APIを1つのAPIにまとめる(UiPathを利用しないことへの対応)
-  - 作成中の各APIは関数化して再利用可能な形に作る
-  - 新規に作成するAPIの入力、出力フォーマットも決定
+    - 作成中の各APIは関数化して再利用可能な形に作る
+    - 3つの関数を包むAPIの入力、出力フォーマットも決定
 
 #### 画像描画APIで使用している描画関数を、既存のパッケージを用いて置き換えられるか調査する(優先度低)
 
@@ -25,14 +25,13 @@
 ## タスク
 
 - クランプ動作検出APIに関わる3つのAPIの関数化
-  - 関数内の引数としての画像の形式を決める
+    - 関数内の引数としての画像の形式を決める
 - 3つの関数を包むAPIの作成
-  - 決定した入力、出力フォーマットにしたがって作成する
+    - 決定した入力、出力フォーマットにしたがって作成する
 
 ## 課題
 
-
+特になし
 <!--
 レスポンスがZIPならリクエストもZIPで受け付けたほうが良い？
-
  -->
